# bgfx-dev

./: .gitignore  .gitmodules  CMakeLists.txt
_cmake/: shader.cmake  texture.cmake
_scripts/: clean.sh  config.sh
axgl/: CMakeLists.txt
axgl/include/axgl/: axgl.h  camera.h  core.h  event_loop.h  file.h  namespace.h  spdlog.h  window.h
axgl/include/axgl/component/: bgfx.h  bgfx_window_component.h  glfw.h
axgl/include/axgl/controller/: camera_controller.h  timestep_controller.h
axgl/include/axgl/event/: event_loop.h
axgl/include/axgl/event/component/: bgfx.h  glfw.h
axgl/include/axgl/model/: mesh.h  shader_program.h
axgl/include/axgl/model/shader/: pc.h
axgl/include/axgl/render/: camera.h  mesh.h  model.h  render_context.h  shader_program.h  texture.h
axgl/include/axgl/render/model/: mesh.h  shader_program.h
axgl/include/axgl/render/model/shader/: pc.h
axgl/include/axgl/render/shader/: pc.h  pntt.h
axgl/res/shader/: fs_pntt.sc  varying.def.sc  vs_pntt.sc
axgl/src/: core.cpp  event_loop.cpp  window.cpp
axgl/src/component/: bgfx.cpp  bgfx_window_component.cpp  glfw.cpp
axgl/src/controller/: camera_controller.cpp
axgl/src/event/: event_loop.cpp
axgl/src/event/component/: bgfx.cpp  glfw.cpp
axgl/src/model/: mesh.cpp  shader_program.cpp
axgl/src/render/: camera.cpp  mesh.cpp  model.cpp  shader_program.cpp  texture.cpp
axgl/src/render/model/: mesh.cpp  shader_program.cpp
bgfx-helloworld/: CMakeLists.txt
bgfx-helloworld/src/: main.cpp
playground/: CMakeLists.txt
playground/src/: data.h  main.cpp  vertex.h  window.cpp  window.h
